# squeeze

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  README.md  install-local.sh
docs/: ARCHITECTURE.md  AUDIT.md  MIXER_ARCHITECTURE.md
docs/audits/: groupnode-concessions.md
docs/discussion/: 2025-02-06-octatrack-level-performance.md  audio-thread-publish-pattern.md  click-dispatch-thread.md  faust.md  feature-complete-2.md  feature-complete.md  limitations.md  octatrack.md  sidechain.md  thread-inventory.md  thread-safety.md  tracker.md
docs/goals/: DSPLibraries.md  DSPLibrariesValueProposition.md  JuicyFeatureAudit.md  LuaErgonomics.md  LuaPerformanceAdvantages.md  SamplerNode.md
docs/specs/: AudioDevice.md  Buffer.md  BufferLibrary.md  Bus.md  Chain.md  ClockDispatch.md  CommandQueue.md  ConcurrencyModel.md  Engine.md  EventQueue.md  EventScheduler.md  Graph.md  GroupNode.md  LfoSource.md  Logger.md  LuaBindings.md  MidiDeviceManager.md  MidiInputNode.md  MidiRouter.md  MidiSplitterNode.md  Modulation.md  Node.md  PDC.md  Parameters.md  PerfMonitor.md  PlaybackCursor.md  PlayerProcessor.md  PluginEditorWindow.md  PluginManager.md  PluginNode.md  PluginProcessor.md  Port.md  Processor.md  PythonAPI.md  PythonHighLevelAPI.md  PythonRelease.md  RecorderNode.md  RecordingNode.md  RecordingProcessor.md  SPSCQueue.md  (+10 more)
examples/: channel-split.lua  hello.py  midi-to-synth.lua  sampler.lua
python/: INTEGRATION.md  README.md  pyproject.toml  squeeze.py
python/examples/: buffer_playback_demo.py  clock_pentatonic.py  demo.py  demo_highlevel.py  live_midi.py  perf_monitor.py  play_synth.py  quickstart.py  wav_loop_player.py
python/squeeze/: INTEGRATION.md  __init__.py  _ffi.py  _helpers.py  _low_level.py  buffer.py  bus.py  chain.py  clock.py  engine.py  midi.py  node.py  perf.py  processor.py  send.py  source.py  squeeze.py  transport.py  types.py
python/tests/: conftest.py  test_audio_device.py  test_engine.py  test_graph.py  test_highlevel.py  test_logger.py  test_midi_device_manager.py  test_node.py  test_squeeze.py
scripts/: transit2-demo.lua
scripts/examples/: hello.lua
src/: main.cpp
src/app/: EditorManager.cpp  EditorManager.h  LuaBootstrap.h  Repl.cpp  Repl.h
src/core/: AudioDevice.cpp  AudioDevice.h  Buffer.cpp  Buffer.h  BufferLibrary.cpp  BufferLibrary.h  Bus.cpp  Bus.h  Chain.cpp  Chain.h  ClockDispatch.cpp  ClockDispatch.h  CommandQueue.h  Engine.cpp  Engine.h  EventQueue.cpp  EventQueue.h  EventScheduler.cpp  EventScheduler.h  GainNode.h  GainProcessor.h  Graph.cpp  Graph.h  Logger.cpp  Logger.h  LuaBindings.cpp  LuaBindings.h  MidiDeviceManager.cpp  MidiDeviceManager.h  MidiInputNode.cpp  MidiInputNode.h  MidiRouter.cpp  MidiRouter.h  Node.h  OutputNode.h  PerfMonitor.cpp  PerfMonitor.h  PlaybackCursor.cpp  PlaybackCursor.h  PlayerProcessor.cpp  (+28 more)
src/ffi/: squeeze_ffi.cpp  squeeze_ffi.h
src/gui/: EditorManager.cpp  EditorManager.h  PluginEditorWindow.h
tests/core/: BufferLibraryTests.cpp  BufferTests.cpp  BusTests.cpp  ChainTests.cpp  ClockDispatchTests.cpp  CommandQueueTests.cpp  EngineTests.cpp  EventQueueTests.cpp  EventSchedulerTests.cpp  GraphTests.cpp  LoggerTests.cpp  LuaBindingsTests.cpp  MidiInputNodeTests.cpp  MidiRouterTests.cpp  NodeTests.cpp  PerfMonitorTests.cpp  PlaybackCursorTests.cpp  PlayerProcessorTests.cpp  PluginManagerTests.cpp  PluginNodeTests.cpp  PortTests.cpp  ProcessorTests.cpp  SPSCQueueTests.cpp  SamplerNodeTests.cpp  SamplerVoiceTests.cpp  SchedulerTests.cpp  SourceTests.cpp  TransportTests.cpp  VoiceAllocatorTests.cpp
tests/ffi/: AudioDeviceFFITests.cpp  BufferFFITests.cpp  ClockDispatchFFITests.cpp  EditorFFITests.cpp  EngineFFITests.cpp  EventSchedulerFFITests.cpp  GraphFFITests.cpp  LoggerFFITests.cpp  MidiDeviceManagerFFITests.cpp  NodeFFITests.cpp  PerfMonitorFFITests.cpp  PluginManagerFFITests.cpp  TransportFFITests.cpp
